--- a/projects/poker-calc-v2/client/app/src/modules/Application/_page/Page.module.scss
+++ b/projects/poker-calc-v2/client/app/src/modules/Application/_page/Page.module.scss
@@ -1,3 +1,8 @@
-.inner {
+.panel {
     background-color: var(--bgColor3);
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
